minor css edits

--- a/Styles/gregslist.css
+++ b/Styles/gregslist.css
@@ -247,7 +247,7 @@ nav.nav-primary > div.nav-branding {
 }
 
 .search-result-heading a:hover {
-    color: ;
+    color: dodgerblue;
 }
 
 .search-result-item {
